Fixed alignments

--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -17,8 +17,5 @@
         top: 0.5rem;
     }
 
-a{
-   color:lightskyblue;
-}
 
 
